@@ -9,6 +9,8 @@ runtime/.pyclewn_keys.gdb
 runtime/.pyclewn_keys.simple
 testsuite/foobar
 testsuite/overloaded
+testsuite/function_template
+testsuite/function_template_sub/*.o
 MANIFEST
 logfile
 
