@@ -1,0 +1,7 @@
+CPPFLAGS = -Wall -g $(PLATFORM)
+
+all: localmax.o
+
+clean:
+	@rm -f localmax.o
+
